# estoque-application

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.override.yml  docker-compose.yml
.github/: pull_request_template.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: categorias.py  clientes.py  fornecedores.py  movimentacoes.py  pedidos.py  produtos.py  relatorios.py
backend/app/core/: database.py  exceptions.py
backend/app/models/: __init__.py  base.py  categoria.py  cliente.py  fornecedor.py  movimentacao.py  pedido.py  produto.py
backend/app/repositories/: categoria_repository.py  cliente_repository.py  fornecedor_repository.py  movimentacao_repository.py  pedido_repository.py  produto_repository.py
backend/app/schemas/: categoria.py  cliente.py  fornecedor.py  movimentacao.py  pedido.py  produto.py
backend/app/services/: categoria_service.py  cliente_service.py  fornecedor_service.py  movimentacao_service.py  pedido_service.py  produto_service.py
backend/app/templates/: 404.html  base.html
backend/app/templates/clientes/: form.html  index.html  upload.html
backend/app/templates/fornecedores/: form.html  index.html
backend/app/templates/movimentacoes/: form.html  index.html
backend/app/templates/pedidos/: form.html  index.html
backend/app/templates/produtos/: categorias.html  form.html  index.html
backend/app/templates/relatorios/: estoque.html  movimentacoes.html
scripts/: seed_db.py
(+3 files in other folders)
